--- a/app/views/scores/edit.html.erb
+++ b/app/views/scores/edit.html.erb
@@ -13,7 +13,7 @@
             <div class="row">
               <div class="mb-1">
                 <%= f.label :date, label: "Data de registro: ", required: true %>
-                <%= f.input :date, as: :string, label: false, input_html: { class: "datepicker", value: @score.date.to_s.strip } %>
+                <%= f.input :date, as: :string, label: false, input_html: { class: "datepicker", value: @score.date.strftime("%d/%m/%Y") } %>
               </div>
             </div>
 
