--- a/app/views/shared/_navbarDS.html.erb
+++ b/app/views/shared/_navbarDS.html.erb
@@ -57,7 +57,10 @@
             <div class="avatar dropdown-toggle br-button sign-in small" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ><i class="fas fa-user" aria-hidden="true"> </i>Meu cadastro</div>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <% if current_user.admin? %>
-              <%= link_to "Blazer", "#", class: "dropdown-item" %>
+              <%= link_to "Adicionar Feriado", new_holiday_path, class: "dropdown-item" %>
+            <% end %>
+            <% if current_user.admin? %>
+              <%= link_to "Lista de Feriados", holidays_path, class: "dropdown-item" %>
             <% end %>
               <%= link_to "Meu Cadastro", users_show_path(current_user), class: "dropdown-item" %>
               <%= link_to "Sair", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
